@@ -1,4 +1,9 @@
+Changes since labca_3_4_1:
 Changes since labca_3_4:
+	2013/06/25 (TS):
+	- FIXED: build problems due to changed scilab libraries when going
+	  from scilab-5.3 to 5.4. Thanks to Takashi Obina for reporting and
+	  suggesting a fix.
 Changes since labca_3_3:
 	2012/01/13 (TS):
 	- glue/ezcaSciInt.c: removed epicsShareAPI for C2F(ezca). This caused
